# genkey-impact

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  README.md
api/: Cargo.toml
api/src/: certificate.rs  key.rs  main.rs
src/: key.rs  main.rs
web/: bsconfig.json  elm.json  index.html  package-lock.json  package.json  rescript.json  tailwind.config.js  vite.config.js
web/src/: Api.elm  App.res  Cert.elm  Certificate.res  Key.elm  Main.elm  Main.res  MessageBox.res  TextInput.res  Utils.res  main.js  style.css
