[package]
name = "genkey-impact-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.38", features = ["serde"] }
openssl = { version = "0.10.64", features = ["vendored"] }
rand = "0.9.2"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
